Tigers&Rabbits IAnimal HW

--- a/HW_2_3_Tishkov_Sergei/FieldHW/FieldHW.csproj
+++ b/HW_2_3_Tishkov_Sergei/FieldHW/FieldHW.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animals\Animal.cs" />
+    <Compile Include="Animals\AnimalType.cs" />
     <Compile Include="Animals\IAnimal.cs" />
     <Compile Include="Animals\Rabbit.cs" />
     <Compile Include="Animals\Tiger.cs" />
