--- a/HW_2_5_Tishkov_Sergei/EventsLib/EventsLib.csproj
+++ b/HW_2_5_Tishkov_Sergei/EventsLib/EventsLib.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D992D10E-2A2A-4EFE-8A43-248E700B4078}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>EventsHW</RootNamespace>
-    <AssemblyName>EventsHW</AssemblyName>
+    <ProjectGuid>{4577EA06-1B08-4A2E-97A3-9866F502978C}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>EventsLib</RootNamespace>
+    <AssemblyName>EventsLib</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,17 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="EventsHW\News.cs" />
+    <Compile Include="EventsHW\NewsEventArgs.cs" />
+    <Compile Include="EventsHW\NewsOperator.cs" />
+    <Compile Include="EventsHW\NewsType.cs" />
+    <Compile Include="EventsHW\NewsViewer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EventsLib\EventsLib.csproj">
-      <Project>{4577ea06-1b08-4a2e-97a3-9866f502978c}</Project>
-      <Name>EventsLib</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
