--- a/HW_2_3_Tishkov_Sergei/AnimalsLib/AnimalsLib.csproj
+++ b/HW_2_3_Tishkov_Sergei/AnimalsLib/AnimalsLib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{90D0073B-9DFB-420D-88E4-0A10E0D37AB6}</ProjectGuid>
+    <ProjectGuid>{00C870DB-8370-4FFF-90E4-19D24C019D36}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FieldHW</RootNamespace>
-    <AssemblyName>FieldHW</AssemblyName>
+    <RootNamespace>AnimalsLib</RootNamespace>
+    <AssemblyName>AnimalsLib</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,13 +40,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\Sex.cs" />
+    <Compile Include="Enums\TypeOfFood.cs" />
+    <Compile Include="Enums\TypeOfConsumption.cs" />
+    <Compile Include="Interfaces\IFood.cs" />
+    <Compile Include="Interfaces\IPlant.cs" />
     <Compile Include="Animals\Animal.cs" />
-    <Compile Include="Animals\AnimalType.cs" />
-    <Compile Include="Animals\IAnimal.cs" />
-    <Compile Include="Animals\Rabbit.cs" />
     <Compile Include="Animals\Tiger.cs" />
     <Compile Include="Field\Field.cs" />
+    <Compile Include="Interfaces\IAnimal.cs" />
+    <Compile Include="Plants\Plant.cs" />
+    <Compile Include="Plants\Grass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Animals\Rabbit.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
