--- a/HW_2_3_Tishkov_Sergei/InterfaceHW/InterfaceHW.csproj
+++ b/HW_2_3_Tishkov_Sergei/InterfaceHW/InterfaceHW.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{738F8948-32B5-4194-BE44-A24A3410A961}</ProjectGuid>
+    <ProjectGuid>{AA8C9AE6-AEE5-4707-998D-535B149D976C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>HW_2_3_Tishkov_Sergei</RootNamespace>
-    <AssemblyName>HW_2_3_Tishkov_Sergei</AssemblyName>
+    <RootNamespace>InterfaceHW</RootNamespace>
+    <AssemblyName>InterfaceHW</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -49,9 +49,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FieldHW\FieldHW.csproj">
-      <Project>{90d0073b-9dfb-420d-88e4-0a10e0d37ab6}</Project>
-      <Name>FieldHW</Name>
+    <ProjectReference Include="..\AnimalsLib\AnimalsLib.csproj">
+      <Project>{00c870db-8370-4fff-90e4-19d24c019d36}</Project>
+      <Name>AnimalsLib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
